--- a/android/one/app/src/main/res/layout/view_title.xml
+++ b/android/one/app/src/main/res/layout/view_title.xml
@@ -9,4 +9,11 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:text="弹弹效果"/>
+    <TextView
+        android:id="@+id/tv_title_right"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_gravity="right"/>
 </FrameLayout>
