--- a/android/one/app/src/main/res/layout/item_music.xml
+++ b/android/one/app/src/main/res/layout/item_music.xml
@@ -8,7 +8,9 @@
         android:layout_margin="20dp"
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         tools:text="asf"/>
+
 
 </FrameLayout>
