--- a/android/one/app/src/main/res/values/colors.xml
+++ b/android/one/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_333">#333</color>
+    <color name="color_999">#999</color>
     <color name="color_303030">#303030</color>
-
+    <color name="color_3f00">#33ff0000</color>
+    <color name="color_33BB86FC">#33BB86FC</color>
 
 </resources>
