--- a/android/one/app/src/main/res/layout/item_video.xml
+++ b/android/one/app/src/main/res/layout/item_video.xml
@@ -7,4 +7,8 @@
         android:id="@+id/video"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
+    <View
+        android:id="@+id/view_click"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
