--- a/android/one/app/src/main/res/layout/frg_list.xml
+++ b/android/one/app/src/main/res/layout/frg_list.xml
@@ -10,6 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp" />
+    <WebView
+        android:id="@+id/web"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
 </FrameLayout>
